// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TypeGenerator enums > generate x-enum-varnames types 1`] = `
"export const enumVarNames = {
  Pending: 0,
  Received: 1,
} as const
export type enumVarNames = (typeof enumVarNames)[keyof typeof enumVarNames]
"
`;

exports[`TypeGenerator enums > generate x-enumNames types 1`] = `
"export const enumVarNames = {
  Pending: 0,
  Received: 1,
} as const
export type enumVarNames = (typeof enumVarNames)[keyof typeof enumVarNames]
export const enumNames = {
  Pending: 0,
  Received: 1,
} as const
export type enumNames = (typeof enumNames)[keyof typeof enumNames]
"
`;

exports[`TypeGenerator simple > generate type for Pet with optionalType \`questionToken\` 1`] = `
"export type Pet = {
  /**
   * @type integer int64
   */
  id: number
  /**
   * @type string
   */
  name: string
  /**
   * @type string | undefined
   */
  tag?: string
}
"
`;

exports[`TypeGenerator simple > generate type for Pet with optionalType \`questionTokenAndUndefined\` 1`] = `
"export type Pet = {
  /**
   * @type integer int64
   */
  id: number
  /**
   * @type string
   */
  name: string
  /**
   * @type string | undefined
   */
  tag?: string | undefined
}
"
`;

exports[`TypeGenerator simple > generate type for Pet with optionalType \`undefined\` 1`] = `
"export type Pet = {
  /**
   * @type integer int64
   */
  id: number
  /**
   * @type string
   */
  name: string
  /**
   * @type string | undefined
   */
  tag: string | undefined
}
"
`;

exports[`TypeGenerator simple > generate type for Pets 1`] = `
"export type Pets = {
  /**
   * @type integer int64
   */
  id: number
  /**
   * @type string
   */
  name: string
  /**
   * @type string | undefined
   */
  tag?: string
}[]
"
`;

exports[`TypeGenerator simple > generate type for nullable fields 1`] = `
"export type Test = {
  /**
   * @type string | undefined
   */
  foo?: string | null
}
"
`;

exports[`TypeGenerator with discriminators > Cat.type defined as const 1`] = `
"export type Cat = {
    /**
     * @type string uuid
    */
    id: string;
    type: "Cat";
    /**
     * @type boolean | undefined
    */
    meow?: boolean;
};
"
`;

exports[`TypeGenerator with discriminators > Dog.type defined as const 1`] = `
"export type Dog = {
    /**
     * @type string uuid
    */
    id: string;
    /**
     * @type number | undefined
    */
    bark?: number;
    type: "Dog";
};
"
`;

exports[`TypeGenerator with discriminators > MixedValueTypeConst ignores type constraint in favor of const constraint 1`] = `
"export type MixedValueTypeConst = {
    /**
     * @type number | undefined
    */
    foobar?: "foobar";
};
"
`;

exports[`TypeGenerator with discriminators > NullConst correctly produces "null" 1`] = `
"export type NullConst = {
    withoutValue?: null;
};
"
`;

exports[`TypeGenerator with discriminators > NumberValueConst const correctly produces \`42\` 1`] = `
"export type NumberValueConst = {
    /**
     * @type number | undefined
    */
    foobar?: 42;
};
"
`;

exports[`TypeGenerator with discriminators > PetStore defined as array with type union 1`] = `
"export type Petstore = {
    /**
     * @type integer
    */
    id: number;
    /**
     * @type array | undefined
     * @default
    */
    pets?: (Cat | Dog)[];
};
"
`;

exports[`TypeGenerator with discriminators > StringValueConst const correctly produces "foobar" 1`] = `
"export type StringValueConst = {
    /**
     * @type string | undefined
    */
    foobar?: "foobar";
};
"
`;

exports[`TypeGenerator with refs > generate type for Pets 1`] = `
"export type Pets = Pet[]
"
`;
